css polish intro animation; set height to avoid layout shift

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -89,16 +89,9 @@
 .introTextModalContent {
   display: grid;
   width: 100vw;
+  height: 100%;
   padding: 6rem;
 }
 .introTextModalContent:focus {
   outline: 0;
-}
-
-@media screen and (max-width: 768px) {
-  .introTextModalContent {
-    max-width: 100%;
-    padding: 2rem;
-    height: 250px;
-  }
 }
